antDesign静态资源 与 普通静态资源相分离

--- a/app/public/antDesign/index.html
+++ b/app/public/antDesign/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="/public/antDesign/index.36889916.js"></script></body>
+<div>hahaha</div>
+<script type="text/javascript" src="/public/antDesign/index.abc525b4.js"></script></body>
 
 </html>
