--- a/lpr_analization/line-stack.html
+++ b/lpr_analization/line-stack.html
@@ -8,6 +8,7 @@
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
        <script type="text/javascript" src="loanBaseRate1Y.js"></script>
        <script type="text/javascript" src="loanBaseRate5Y.js"></script>
+       <script type="text/javascript" src="fedRate.js"></script>
        <script type="text/javascript" src="main.js"></script>
    </body>
 </html>
